--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Document</title>
+</head>
+
+<body>
     <h1>Hello World</h1>
+</body>
+
 </html>
